# buddyme-code

./: .gitignore  README.md  pyproject.toml
buddyMe/: __init__.py  __main__.py  cli.py  main.py
buddyMe/agent_moudle/: agent.py  task_pipeline.py  task_runner.py  todo_manager.py
buddyMe/anthropic_standard/: anthropic_code_plan_base.py  basic_anthropic_client.py  basic_anthropic_tool.py  unified_client.py
buddyMe/cmd_library/: __init__.py  base.py  registry.py
buddyMe/cmd_library/builtin/: __init__.py  memory_cmds.py  skill_cmds.py  system_cmds.py
buddyMe/context/: __init__.py  brain_loader.py  compressor.py  prompt_builder.py
buddyMe/initspace/: contextbuild.py  memory_extractor.py  memorybuild.py  skill_loader.py  todo_manager.py  use_memory.py  utils.py  we.md
buddyMe/initspace/brain/: AGENT.md  IDENTITY.md  SOUL.md  SUB_AGENT.md  USER.md
buddyMe/initspace/memorys/: memory_summary.md  subtask_results.json  we.md
buddyMe/llm_moudle/: basic_llm.py  model_config.py
buddyMe/memory/: __init__.py  extractor.py  manager.py  provider.py  store.py
buddyMe/session/: __init__.py  conversation_logger.py  message_history.py  state.py  subtasks_manager.py
buddyMe/skill_library/skills/emergence-paper-orchestra-1.0.0/: README.md  SKILL.md  hub_manifest.json  manifest.json  skill_manifest.json
buddyMe/skill_library/skills/qqmail-1.0.0/: SKILL.md
buddyMe/tool_moudle/: baidu_search_tool.py  bash_tool.py  invoke_skill_tool.py
buddyMe/utils/: __init__.py  atomic.py  paths.py
initspace/memorys/: USER_history.json
(+4 files in other folders)
